# gaia-landslides-detect

./: .gitignore  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICK_REFERENCE.md  README.md  config.yaml  environment.yml  pyproject.toml  requirements.txt  setup.py  test_implementation.py  train.py
data/: .gitkeep
notebooks/: UW_DREAM_mudslide_detection.ipynb  example_analysis.ipynb  seisbench_detection.ipynb  seisbench_detections_CC.SUNT.2025.347.csv
plots/: .gitkeep
src/: __init__.py  data.py  detect.py  interactive_plots.py  models.py  seisbench_models.py  utils.py
tests/: __init__.py  test_data.py  test_detect.py  test_models.py
